--- a/css/styles.css
+++ b/css/styles.css
@@ -495,3 +495,20 @@ body, html {
   align-items: center;
 }
 
+.zoom {  
+  transition: transform .2s; /* Animation */  
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.cleanzoom {  
+  transition: transform .3s; /* Animation */  
+  margin: 0 auto;
+}
+
+.cleanzoom:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
